--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,38 @@
     transform: rotate(360deg);
   }
 }
+
+#include-sidebar {
+  background-color: #1c2237;
+}
+.sidebar {
+  background-color: #666666;
+  height: 100vh;
+}
+.sidebar-items {
+  height: 100%;
+}
+.sidebar-item {
+  margin-top: 28px;
+  display: flex;
+  justify-content: center;
+}
+.sidebar-item > button {
+  display: flex;
+  background-color: #666666;
+  border: none;
+  color: white;
+  font-size: 40px;
+  border-radius: 40px;
+}
+.sidebar-item > button > img {
+  padding-top: 15px;
+  width: 12%;
+}
+.sidebar-item > button > p {
+  padding-left: 20px;
+}
+.sidebar-item > button:hover {
+  background-color: white;
+  color: #666666;
+}
