--- a/src/component/loginPageComponent/loginPageComponent.css
+++ b/src/component/loginPageComponent/loginPageComponent.css
@@ -6,6 +6,14 @@
     border-style: ridge;
 }
 
+.buttonClass{
+    width: 150px;
+    height: 35px;
+    margin: 5px;
+    border-radius: 5px;
+    border-style: ridge;
+}
+
 .div-main{
     width:500px;
 
